# fantasy-baseball

./: .env.example  .gitignore  CLAUDE.md  LICENSE  pyproject.toml
analysis/: draft_history.py
config/: __init__.py  league.py  positions.py  scoring.py
data/: __init__.py  fangraphs.py  yahoo_positions.py
draft/: __init__.py  api.py  state.py  tracker.py
scripts/: analyze_past_drafts.py  compare_strategies.py  generate_values.py  generate_values_yahoo.py  lookup_player.py  run_draft.py  simulate_draft.py  upload_to_yahoo.py
simulation/: __init__.py  engine.py  strategies.py
static/: draft.js  style.css
templates/: draft.html
tests/: test_auction.py  test_draft_history.py  test_names.py  test_points.py  test_replacement.py  test_simulation.py  test_state.py  test_strategies.py  test_tier_depletion.py  test_yahoo_positions.py
valuation/: __init__.py  auction.py  names.py  points.py  replacement.py
yahoo/: __init__.py  auth.py  league_client.py  upload.py
